# code

./: .gitattributes  2024-08-30_-_CoDE_dataset_20240830_23:21:24.h5  20240423CoDE_dataset_23-04-2024_18:35:15.h5  20240424_-_CoDE_dataset_20240424_18:46:21.h5  20240425_-_CoDE_dataset_20240425_15:38:10.h5  20240425_-_CoDE_dataset_20240425_16:10:14 (copy).h5  20240425_-_CoDE_dataset_20240425_16:10:14.h5  20240425_-_CoDE_dataset_20240425_18:54:45.h5  20240425_-_CoDE_dataset_20240425_19:12:27.h5  20240425_-_CoDE_dataset_20240425_19:27:43.h5  20240425_-_CoDE_dataset_20240425_19:43:16.h5  2025-03-27_21:05:25_-_CoDE_dataset_20250327_21:05:19.h5  2025-03-27_21:06:25_-_CoDE_dataset_20250327_21:05:19.h5  2025-03-27_21:07:25_-_CoDE_dataset_20250327_21:05:19.h5  305_008.py  74_008.py  CoDE_GUI.py  CoDE_GUI_v0.py  CoDE_GUI_v2.py  CoDE_dataset_03-04-2024_10:11:10.h5  CoDE_dataset_03-04-2024_10:11:37.h5  CoDE_dataset_03-04-2024_10:17:21.h5  CoDE_dataset_18-04-2024_13:06:25.h5  CoDE_dataset_18-04-2024_15:27:08.h5  CoDE_dataset_18-04-2024_15:38:34.h5  CoDE_dataset_18-04-2024_16:08:15.h5  CoDE_dataset_18-04-2024_16:09:56.h5  CoDE_dataset_19-01-2024_19:44:15.h5  GUI_16012024.py  GUI_rigolPub.py  README.md  [0.01Hz_res]FFT_avg_logs_11-10-2023_14:12:07.txt  [0.1Hz_res]FFT_avg_logs_11-10-2023_14:18:11.txt  core_pb2.py  flrx_tests.py  hdf_browser.py  pub_test.py  rigol_opt.py
bit_fpga/: 01062023.bit  01062023_v2.bit  01062023_v3.bit  01062023_v4.bit  01062023_v5.bit  02062023.bit  02062023_v2.bit  02062023_v3.bit  24052023.bit  24052023_v2.bit  25052023.bit  25052023_v2.bit  25052023_v3.bit  27052023.bit  30052023.bit  35T_200kHz.bit  35T_JD_pin3.bit  _01062023.bit
core/: .APD_cvt_feedgnuplot.cc  .APD_fft.cc  .APD_fft_02052023.cc  .APD_publisher.cc  .APD_reg.cc  .APD_reg.cc.swp  .CMakeLists.txt  .core.proto  APD_fft.cc  APD_fft_full_code_sw.cc  APD_plot_cvt.cc  APD_plot_fft.cc  APD_publisher.cc  APD_reg.cc  CMakeLists.txt  TwisTorrMonitor_code_sw.cc  TwisTorrSS2_code_sw.cc  TwisTorrSetter_code_sw.cc  broker.cc  broker_client.cc  client.h  client.tpp  cmake_install.cmake  common.cmake  core.grpc.pb.cc  core.proto  logger.h  recorder.cc  storage.cc  storage_client.h  subscriber_client.cc
core (copy)/: APD_fft_full_code_sw.cc  APD_fft_partial_code_sw.cc  APD_publisher_code_sw.cc  CMakeCache.txt  CMakeLists.txt  Makefile  TwisTorrIO_code_sw.cc  TwisTorrMonitor_code_sw.cc  TwisTorrSS1_code_sw.cc  core.grpc.pb.h  core_pb2.py  storage.cc  storage_client.cc
core/reactor/: PublisherReactor.cc  reactor.h  server_reactor.h
core/reactor (copy)/: PublisherClientReactor.cc  PublisherServerReactor.cc  SubscriberReactor.cc  SubscriberServerReactor.cc  reactor.h
core_ba/: APD_fft_full.cc  APD_fft_full_code_sw (copy).cc  APD_fft_full_code_sw.cc  APD_fft_partial.cc  APD_fft_partial_code_sw.cc  APD_logs_28-07-2023_11:08:03.txt  APD_plot_cvt_code_sw.cc  APD_publisher.cc  APD_publisher_code_sw.cc  APD_reg_fft_01.cc  APD_reg_fft_01_code_sw.cc  APD_reg_fft_1_code_sw.cc  APD_reg_proc.cc  APD_reg_proc_code_sw.cc  APD_reg_zero.cc  APD_reg_zero_code_sw.cc  CMakeCache.txt  CMakeLists.txt  CoDE_GUI.py  Makefile  PrevacMonitor_code_sw.cc  PrevacSetter_code_sw.cc  TwisTorrIO_code_sw.cc  TwisTorrMonitor_code_sw.cc  TwisTorrSetter_code_sw.cc  [1kHz]APD_logs_31-07-2023_23:26:51.txt  cmake_install.cmake  core.grpc.pb.cc  core.grpc.pb.h  core.pb.cc  core.pb.h  core.proto  core_pb2.py  core_pb2_grpc.py  fft4.cc  publisher6.cc  publisher_client.cc  storage.cc  subscriber6.cc
core_ba/reactor/: client_reactor.tpp  publisher_server_reactor.cc  server_reactor.tpp
cores/: APD_fft3.cc  APD_plot_cvt.cc  APD_publisher.cc  APD_reg.cc  APD_reg_fft.cc  APD_reg_fft_avg.cc  CMakeCache.txt  CMakeLists.txt  CoDE_GUI_gRPC.py  CoDE_GUI_v2.py  GUI_grpc.py  Makefile  broker.py  bundle_reader.cc  client.h  cmake_install.cmake  core.grpc.pb.cc  core.grpc.pb.h  core.pb.cc  core.pb.h  core.proto  core_pb2.py  core_pb2_grpc.py  fft3.cc  publisher_client.cc  subscriber_client.cc
cores/core_grpc/: core.pb.cc  core.proto
cores/reactor/: publisher_server_reactor.cc  subscriber_server_reactor.cc
coress/: APD_fft.cc  APD_plot_cvt.cc  APD_publisher.cc  APD_reg_fft.cc  CMakeCache.txt  CMakeLists.txt  Makefile  broker.cc  cmake_install.cmake  core.grpc.pb.cc  core.grpc.pb.h  core.pb.h  fft.cc  fft3 (copy).cc  fft3.cc  publisher.cc  publisher2.cc  publisher3.cc  publisher4.cc  publisher5.cc  subscriber.cc  subscriber5.cc
coress2/: CMakeLists.txt  broker2.cc  client.h  core.proto  fft4.cc  fft_full.cc  fft_partial.cc  publisher6.cc  publisher_client.cc  subscriber6.cc  subscriber_client.cc
coress3/: CMakeCache.txt  CMakeLists.txt  Makefile  broker.cc  broker_client.cc  broker_client.h  client.h  client.tpp  cmake_install.cmake  core.grpc.pb.h  core.pb.cc  core.pb.h  core.proto  fft_full.cc  fft_partial.cc  log.h  logger.cc  publisher.cc  recorder.cc  storage.cc  storage_client.cc  storage_client.h  subscriber.cc
coress3/reactor/: client_reactor.h  client_reactor.tpp  server_reactor.h  server_reactor.tpp
tests/: Agilent_v2.py  PREVAC_TESTS.cc  PREVAC_TESTS.py  RigolControl.py  TEST  UPS  UPS_test.cc  bar.cc  bar.py  prevacmonitor.service  pub_test.py  read_h5.py  twistorrmonitor.service  ups_scan.py  ups_test.py  vacum+ups.cc  vacum_ups_working.cc
(+36 files in other folders)
